data/derived/fa15/progs/unify/prog2085.ml.out
Characters 8-21:
  let _ = digitsOfInt 5-6;;
          ^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
